--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "install": "^0.13.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-pose": "^4.0.10",
     "react-scripts": "3.4.3",
     "update": "^0.7.4"
   },
