--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "gh-pages": "^3.1.0",
     "install": "^0.13.0",
     "react": "^16.13.1",
+    "react-document-meta": "^3.0.0-beta.2",
     "react-dom": "^16.13.1",
     "react-pose": "^4.0.10",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "update": "^0.7.4"
   },
